2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/nfs.c (NFS_MAKE_DEV_T_INO_HACK,
	NFS_MAKE_DEV_T): Cast "id"'s to rtems_device_minor_number.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/rpcio.c, libfs/src/nfsclient/src/rpcio.h:
	Use rpcprog_t for "program args", use rpcvers_t for "version args".

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/rtems_portmapper.c: Reflect changes to librpc.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/include/rpc/clnt.h, librpc/include/rpc/rpc_msg.h,
	librpc/src/rpc/clnt_generic.c, librpc/src/rpc/clnt_raw.c,
	librpc/src/rpc/clnt_tcp.c, librpc/src/rpc/clnt_udp.c,
	librpc/src/rpc/pmap_clnt.c, librpc/src/rpc/pmap_getmaps.c
	librpc/src/rpc/pmap_getport.c:
	Partial merger from freebsd (portability fixes).

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/socketvar.h (struct sockbuf):
	Use void* instead of caddr_t.
	* libfs/src/nfsclient/src/rpcio.c: 
	Use address to rpciod in calls to rxWakeupCB.
	* libnetworking/sys/socket.h (struct sockwakeup):
	Use void* instead of caddr_t.
	* librpc/include/rpc/xdr.h: Cosmetics from freebsd.

2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_udp.c: Cosmetics from freebsd.

2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_tcp.c: Partial merger from freebsd
	(Fix strict-aliasing).

2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_raw.c: Partial merger from freebsd
	(Improved 16 bit compatibility; Fix strict-aliasing).

2010-05-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/rpc_prot.c: Partial merger from freebsd
	(Improved 64 bit compatibility; bug fix).

2010-05-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1528/cpukit
	* libcsupport/src/malloc_boundary.c: Cast to intptr_t* instead of
	int32_t* for 16 bit target compliance.
